[JBTM-3673] Removed maven profile jdk17